<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantidad"/>
    <EditText
        android:id="@+id/cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"/>
    <RadioGroup
        android:id="@+id/tipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/vip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vip"/>
        <RadioButton
            android:id="@+id/luneta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/luneta"/>
        <RadioButton
            android:id="@+id/prefer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prefer"/>
        <RadioButton
            android:id="@+id/general"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/general"/>
    </RadioGroup>
    <Button
        android:id="@+id/comprar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comprar"/>
    <TextView
        android:id="@+id/resultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>